--- a/recipes/san.html
+++ b/recipes/san.html
@@ -6,15 +6,14 @@
     <title>Lasagna</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
-    <h2>Stacked meat!</h2>
+    <h1>Sandwich</h1>
+    <h2>Stacked bread!</h2>
     <img src="./lasimg.jpg" width="200px" />
     <div>
       <h4>Ingredients</h4>
       <ul>
-        <li>meat</li>
-        <li>pasta</li>
-        <li>sauce</li>
+        <li>bread</li>
+        <li>toppings</li>
       </ul>
       <h4>Steps</h4>
       <ol>
