--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
       <li><a href="recipes/pizza.html">Pizza</a></li>
       <li><a href="recipes/san.html">San</a></li>
     </ul>
+    <br />
+    <img
+      src="./images/dog.jpg"
+      alt="A portrait photo of a black Pug dog against a yellow background"
+      height="853"
+      width="640"
+    />
+    <br /><br />
     <footer>
+      <a href="./pages/about.html">About</a>
       <a href="https://www.theodinproject.com/about">About The Odin Project</a>
     </footer>
   </body>
