Update other recipes to match lasagna style

--- a/pages/recipes/lasagna.html
+++ b/pages/recipes/lasagna.html
@@ -50,6 +50,7 @@
       </blockquote>
     </section>
 
+    <a href="../Recipes.html">Back to Recipes</a><br />
     <a href="../index.html">Home</a>
   </body>
 </html>
