--- a/pages/recipes/pizza.html
+++ b/pages/recipes/pizza.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Showtime - Pizza</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../../style.css" />
   </head>
   <body>
     <h1>Pizza</h1>
     <h2>bread and toppings!</h2>
     <img src="./lasimg.jpg" width="200px" />
-    <div>
-      <h4>Ingredients</h4>
+    <section>
+      <h3>Ingredients</h3>
       <ul>
         <li>wheat</li>
         <li>sauce</li>
         <li>meat</li>
       </ul>
-      <h4>Steps</h4>
+      <h3>Steps</h3>
       <ol>
         <li>get your ingredients</li>
         <li>put them together</li>
       </ol>
-      <div>
-        <h2>Thoughts:</h2>
+      <section>
+        <h3>Thoughts:</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -33,9 +33,9 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
-      </div>
-      <div>
-        <h2>Review</h2>
+      </section>
+      <section>
+        <h3>Review</h3>
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -45,8 +45,9 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </blockquote>
-      </div>
-    </div>
+      </section>
+    </section>
+    <a href="../Recipes.html">Back to Recipes</a><br />
     <a href="../index.html">Home</a>
   </body>
 </html>
