--- a/pages/recipes/sandwich.html
+++ b/pages/recipes/sandwich.html
@@ -11,7 +11,7 @@
     <h2>Stacked bread!</h2>
     <img src="./lasimg.jpg" width="200px" />
     <div>
-      <h4>Ingredients</h4>
+      <h3>Ingredients</h3>
       <ul>
         <li>bread</li>
         <li>toppings</li>
@@ -21,8 +21,8 @@
         <li>get your ingredients</li>
         <li>put them together</li>
       </ol>
-      <div>
-        <h2>Thoughts:</h2>
+      <section>
+        <h3>Thoughts:</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -32,9 +32,9 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
-      </div>
-      <div>
-        <h2>Review</h2>
+      </section>
+      <section>
+        <h3>Review</h3>
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -44,8 +44,9 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </blockquote>
-      </div>
+      </section>
     </div>
+    <a href="../Recipes.html">Back to Recipes</a><br />
     <a href="../index.html">Home</a>
   </body>
 </html>
