Add screenshot img of CSS movie project. Change img folder structure from "images" to "public/img"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
             <figure>
               <img />
               <figcaption>Recipes page</figcaption>
-              <figcaption>html</figcaption>
+              <figcaption>html css</figcaption>
+            </figure>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <figure>
+              <img src="./public/img/css-grid.jpg" />
+              <figcaption>CSS Movie Grid</figcaption>
+              <figcaption>css html</figcaption>
             </figure>
           </a>
         </li>
