Reduce figcaption to one per fig and change the tech badges to div/spans

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
                 src="./public/img/recipe.jpg"
                 alt="screenshot of a project website showing links to recipes with an image of a dog"
               />
-              <figcaption>Recipes page</figcaption>
-              <figcaption class="tech-badge">html css</figcaption>
+              <figcaption>
+                <span class="project-title">Recipes page</span>
+                <div class="tech-badges">
+                  <span class="tech-badge">html</span>
+                  <span class="tech-badge">css</span>
+                </div>
+              </figcaption>
             </figure>
           </a>
         </li>
@@ -31,8 +36,13 @@
                 src="./public/img/movie.jpg"
                 alt="screenshot of project website showing a grid of film posters"
               />
-              <figcaption>CSS Movie Grid</figcaption>
-              <figcaption class="tech-badge">css html</figcaption>
+              <figcaption>
+                <span class="project-title">CSS Movie Grid</span>
+                <div class="tech-badges">
+                  <span class="tech-badge">css</span>
+                  <span class="tech-badge">html</span>
+                </div>
+              </figcaption>
             </figure>
           </a>
         </li>
